fix title align

--- a/src/modules/part/part.module.scss
+++ b/src/modules/part/part.module.scss
@@ -300,6 +300,10 @@
 				font-size: 20px;
 
 				text-align: left;
+
+				span {
+					text-align: left;
+				}
 			}
 		}
 
